# icanhastool

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
.claude/: agents.md  settings.local.json
.github/workflows/: ci.yml  release.yml
coverage/: coverage-final.json  index.html
coverage/lib/: Settings.svelte.html  Terminal.svelte.html  VoiceControl.svelte.html  index.html
coverage/lib/stores/: app.ts.html  index.html
e2e/: app.spec.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: audio.rs  claude.rs  commands.rs  lib.rs  main.rs  vosk_stt.rs
src/__tests__/: Settings.test.ts  Terminal.test.ts  VoiceControl.test.ts  stores.test.ts
src/lib/: Settings.svelte  Terminal.svelte  VoiceControl.svelte  Waveform.svelte
src/lib/stores/: app.ts
src/routes/: +page.svelte
