[package]
name = "icanhastool"
version = "0.1.0"
description = "Voice interface for Claude Code using local speech recognition"
authors = ["you"]
edition = "2021"
license = "MIT"

[lib]
name = "icanhastool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
vosk = "0.2"
portable-pty = "0.8"
thiserror = "1"
parking_lot = "0.12"
which = "6"

[dev-dependencies]
mockall = "0.11"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

